--- a/package.json
+++ b/package.json
@@ -77,7 +77,9 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "jszip": "^2.6.1",
+    "node-mongoose-ts": "^0.1.4",
     "pm2": "^2.5.0",
-    "typescript-rest": "^1.1.0"
+    "typescript-rest": "^1.1.0",
+    "mongoose": "^4.11.6"
   }
 }
