--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
         "server/types/*"
       ]
     },
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   }
 }
