--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/filesystem": "0.0.28",
     "@types/jest": "^20.0.4",
     "@types/jszip": "0.0.33",
+    "@types/mongoose": "^4.7.21",
     "@types/node": "^8.0.13",
     "@types/supertest": "^2.0.2",
     "chai": "^4.1.0",
