--- a/package.json
+++ b/package.json
@@ -50,37 +50,34 @@
     "node": "8.4.0"
   },
   "devDependencies": {
-    "@types/body-parser": "^1.16.4",
-    "@types/chai": "^4.0.1",
-    "@types/dotenv": "^4.0.0",
-    "@types/express": "^4.0.36",
+    "@types/body-parser": "^1.16.5",
+    "@types/chai": "^4.0.4",
+    "@types/dotenv": "^4.0.1",
+    "@types/express": "^4.0.37",
     "@types/filesystem": "0.0.28",
-    "@types/jest": "^20.0.4",
-    "@types/jszip": "0.0.33",
+    "@types/jest": "^20.0.8",
     "@types/mongoose": "^4.7.21",
-    "@types/node": "^8.0.13",
-    "@types/supertest": "^2.0.2",
-    "chai": "^4.1.0",
+    "@types/node": "^8.0.27",
+    "@types/supertest": "^2.0.3",
+    "chai": "^4.1.2",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
-    "gulp-typescript": "^3.2.0",
-    "jest": "^20.0.4",
-    "mocha": "^3.4.2",
+    "gulp-typescript": "^3.2.2",
+    "jest": "^21.0.1",
+    "mocha": "^3.5.0",
     "supertest": "^3.0.0",
-    "ts-jest": "^20.0.7",
-    "ts-node": "^3.2.0",
-    "tslint": "^5.5.0",
-    "typescript": "^2.5.1"
+    "ts-jest": "^21.0.0",
+    "ts-node": "^3.3.0",
+    "tslint": "^5.7.0",
+    "typescript": "^2.5.2"
   },
   "dependencies": {
     "body-parser": "^1.17.2",
-    "docxtemplater": "^3.1.3",
     "dotenv": "^4.0.0",
-    "express": "^4.15.3",
-    "jszip": "^2.6.1",
+    "express": "^4.15.4",
+    "jszip": "^3.1.4",
+    "mongoose": "^4.11.10",
     "node-mongoose-ts": "^0.1.4",
-    "pm2": "^2.5.0",
-    "typescript-rest": "^1.1.0",
-    "mongoose": "^4.11.6"
+    "pm2": "^2.6.1"
   }
 }
