--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "chai": "^4.1.2",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
+    "gulp-mocha": "^4.3.1",
     "gulp-typescript": "^3.2.2",
     "jest": "^21.0.1",
     "mocha": "^3.5.0",
