--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
       "ts",
       "js"
     ],
+    "bail": true,
     "transform": {
       "^.+\\.(ts|tsx)$": "./node_modules/ts-jest/preprocessor.js"
     },
     "testMatch": [
-      "**/tests/**/*.test.(ts|js)"
+      "**/tests/**/*.ts"
     ],
     "testEnvironment": "node",
     "mapCoverage": true,
